# FLaVor

./: .flake8  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pr-agent.yml
examples/fl-client/: README.md
examples/fl-client/lightgbm/: Dockerfile  main.py  requirements.txt
examples/fl-client/pytorch/: main.py
examples/fl-client/svm/: main.py  requirements.txt
examples/fl-client/tensorflow/: Dockerfile  main.py  requirements.txt
examples/fl-client/xgboost/: Dockerfile  main.py  requirements.txt
examples/fl-server/: Dockerfile  README.md  main.py  requirements.txt
examples/fv/: Dockerfile  main.py  requirements.txt
examples/hello-fl-client/: Dockerfile  README.md  main.py  requirements.txt
examples/hello-fl-client/pytorch/: Dockerfile  main.py  requirements.txt
examples/hello-fl-client/tensorflow/: main.py  requirements.txt
examples/hello-fl-client/xgboost/: requirements.txt
examples/hello-fl-server/: README.md  main.py
examples/hello-fv/: Dockerfile  README.md  main.py  requirements.txt
examples/hello-inference/: AiCOCO_spec.md  Dockerfile  README.md  __init__.py  base_inference_model.py  classification_example.md  cls_example.py  det_example.py  detection_example.md  gradio_example.md  gradio_example.py  input_output_structure.md  main.py  reader.py  reg_example.py  regression_example.md  requirements.txt  seg3d_example.py  seg_example.py  segmentation_example.md  send_request.py  test_3d_examples.py  test_examples.py  utils.py
examples/hello-inference/SAM/: sam_encoder.py  sam_triton_inference_model.py  test_sam_inference.py  test_sam_triton.py
examples/hello-inference/classification_example/: Dockerfile  README.md  main.py  requirements.txt
examples/hello-inference/classification_example/test_data/: input.json
examples/hello-inference/detection_example/: Dockerfile  README.md  main.py  requirements.txt
examples/hello-inference/dockerfile/: Dockerfile.cls  Dockerfile.det  Dockerfile.reg  Dockerfile.seg
examples/hello-inference/docs/: classification_example.md  detection_example.md  regression_example.md  segmentation_example.md
examples/hello-inference/gradio_example/: README.md  main.py
examples/hello-inference/regression_example/: Dockerfile  README.md  main.py
examples/hello-inference/segmentation_example/: Dockerfile  README.md  main.py  utils.py
examples/inference/: README.md  cls_example.ipynb  det_example.ipynb  det_example.py  gradio_example.ipynb  gradio_example.py  hybrid_example.ipynb  reg_example.ipynb  seg3d_example.ipynb  seg_example.ipynb  seg_example.py  send_request.py  tabular_cls_example.ipynb  tabular_reg_example.ipynb  triton_example.ipynb
examples/inference/SAM/: README.md  sam_decoder.py  sam_encoder.py  sam_triton_inference_model.py
examples/inference/dockerfile/: Dockerfile.det  Dockerfile.reg  Dockerfile.seg
examples/inference/docs/: AiCOCO_spec.md  AiCOCO_tabular_spec.md  classification_example.md  gradio_example.md  input_output_structure(image).md  input_output_structure(tabular).md  input_output_structure.md  regression_example.md
examples/inference/test_data/cls_reg/: expected_cls.json  expected_reg.json  input.json
examples/inference/test_data/det/: expected.json  input.json
examples/inference/test_data/hybrid/: expected.json  input.json  test_cls.csv
examples/inference/test_data/reg/: input.json
examples/inference/test_data/seg/: expected.json  input.json  input_3d.json  input_3d_dcm.json  input_3d_dcm_shuffle.json  input_seg.json
flavor/: __init__.py  version.py
flavor/cli/: check_fl.py  check_fv.py  flavor_agg.py
flavor/cook/: app.py  model.py  service_pb2.py  service_pb2_grpc.py  servicer.py  utils.py
flavor/gadget/: lightgbm.py  xgboost.py
flavor/runs/: flavor_agg.py  flavor_fl.py
flavor/schema/: FLresult.json  FVresult.json  aicoco.json
flavor/serve/: api.py  apps.py  batcher.py  processor.py
flavor/serve/inference/: __init__.py  base_aicoco_inference_model.py  base_gradio_inference_model.py  base_inference_model.py  base_triton_inference_model.py  base_triton_python_model.py  records_artifacts.py  triton_python_backend.md
flavor/serve/inference/inference_models/: __init__.py  base_aicoco_inference_model.py  base_gradio_inference_model.py  base_inference_model.py  base_triton_inference_model.py
flavor/serve/inference/strategies/: __init__.py  aicoco_strategy.py  base_strategy.py  gradio_strategy.py
flavor/serve/invocations/: __init__.py  base_invocation.py  infer_invocation.py
flavor/serve/middlewares/: __init__.py  queue.py  transform_file_to_filename.py
flavor/serve/models/: __init__.py  aicoco_model.py  flavor_infer_model.py
flavor/serve/strategies/: __init__.py  aicoco_strategy.py  base_strategy.py  gradio_strategy.py
flavor/taste/: app.py  model.py  servicer.py
flavor/utils/: infer_utils.py
flavors/cook/: log_msg.py  service_pb2.py  service_pb2_grpc.py  servicer.py  utils.py
flavors/taste/: servicer.py
schema/: ai-coco-v2.json
scripts/: check_agg.py  check_fl.py  flavor_fl.py  flavor_fv.py
tests/inference/: test_3d_example.py  test_examples.py  test_sam_inference.py  test_sam_triton.py  test_tabular_example.py  test_triton_example.py  test_triton_inference_model.py
tests/inference/test_tasks/: cls_example.py  det_example.py  reg_example.py  seg3d_example.py  seg_example.py  seg_triton_example.py  tabular_cls_example.py  tabular_reg_example.py
tests/integration/fl-client/: test_fl.py
tests/integration/fv/: test_fv.py
tests/integration/inference/: test_3d_example.py  test_examples.py  test_infer_invocation_temp_files.py  test_tabular_records_file.py  test_triton_example.py
tests/integration/inference/test_tasks/: cls_example.py  det_example.py  hybrid_example.py  reg_example.py  seg3d_example.py  seg_example.py  seg_triton_example.py  tabular_cls_example.py  (+1 more)
tests/integration_tests/inference/: test_3d_example.py  test_configs.yaml  test_examples.py  test_tabular_example.py
tests/unittest/: test_utils.py
(+23 files in other folders)
