[tool.poetry]
name = "flavor"
version = "1.1.0"
description = "AILabs Federated Learning and Validation Framework"
authors = ["Stanley Huang <ding3820@gmail.com>", "Keng-Chi Liu <calvin89029@gmail.com>"]
readme = "README.md"
exclude = ["examples*"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
jsonschema = ">=4.5.1"
aiofile = "^3.8.2"
fastapi = "^0.100.0"
pydantic = "^2.0.0"
uvicorn = "^0.21.0"
nanoid = "^2.0.0"
gradio = "^4.0.0"
tritonclient = {extras = ["http"], version = "^2.45.0"}
opencv-python-headless = "4.8.1.78"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[tool.poetry.group.all_examples]
optional = true

[tool.poetry.group.all_examples.dependencies]
simpleitk = "^2.3.1"
# dicom2jpg = "^0.1.10"
scipy = "^1.9.2"
torch = {version = "1.13.0", source = "torch-cu117"}
torchvision = {version = "0.14.0", source = "torch-cu117"}
lungmask = "^0.2.20"
monai = {version = "~1.1.0", extras = ["einops"]}
ultralytics = "^8.2.16"

[tool.poetry.group.cls_example]
optional = true

[tool.poetry.group.cls_example.dependencies]
torch = {version = "1.13.0", source = "torch-cu117"}
torchvision = {version = "0.14.0", source = "torch-cu117"}

[tool.poetry.group.det_example]
optional = true

[tool.poetry.group.det_example.dependencies]
torch = {version = "1.13.0", source = "torch-cu117"}
ultralytics = "^8.2.16"

[tool.poetry.group.reg_example]
optional = true

[tool.poetry.group.reg_example.dependencies]
torch = {version = "1.13.0", source = "torch-cu117"}
torchvision = {version = "0.14.0", source = "torch-cu117"}

[tool.poetry.group.seg_example]
optional = true

[tool.poetry.group.seg_example.dependencies]
simpleitk = "^2.3.1"
lungmask = "^0.2.20"

[tool.poetry.group.seg3d_example]
optional = true

[tool.poetry.group.seg3d_example.dependencies]
torch = {version = "1.13.0", source = "torch-cu117"}
scipy = "^1.9.2"
monai = {version = "~1.1.0", extras = ["einops"]}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ipykernel = "^6.29.4"

[[tool.poetry.source]]
name = "torch-cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[tool.poetry.scripts]
flavor-fl = "bin.flavor_fl:main"
flavor-fv = "bin.flavor_fv:main"
flavor-agg = "bin.flavor_agg:main"
check-fl = "bin.check_fl:main"
check-fv = "bin.check_fv:main"
check-agg = "bin.check_agg:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
