[project]
name = "flavor"
version = "2.2.3"
description = "AILabs Federated Learning and Validation Framework"
authors = [
    { name = "Stanley Huang", email = "ding3820@gmail.com" },
    { name = "Keng-Chi Liu", email = "calvin89029@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofile>=3.8.2,<4.0.0",
    "fastapi>=0.100.0,<0.101.0",
    "pydantic>=2.0.0,<3.0.0",
    "uvicorn>=0.21.0,<0.22.0",
    "nanoid>=2.0.0,<3.0.0",
    "gradio>=4.0.0,<5.0.0",
    "requests>=2.28.0,<3.0.0",
    "opencv-python-headless>=4.5.3.56,<5.0.0",
    "tritonclient[http]>=2.17.0,<=2.60.0",
    "pandas",
]

[project.scripts]
flavor-fl = "flavor.cli.flavor_fl:main"
flavor-fv = "flavor.cli.flavor_fv:main"
flavor-agg = "flavor.cli.flavor_agg:main"
check-fl = "flavor.cli.check_fl:main"
check-fv = "flavor.cli.check_fv:main"
check-agg = "flavor.cli.check_agg:main"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0,<4.0.0",
    "ipykernel>=6.29.4,<7.0.0",
]
test = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.6,<0.24.0",
    "httpx>=0.27.0,<0.28.0",
]
all_examples = [
    "simpleitk>=2.3.1,<3.0.0",
    "scipy>=1.9.2,<2.0.0",
    "torch==2.1.0+cu121",
    "lungmask>=0.2.20,<0.3.0",
    "monai[einops]>=1.1.0,<1.2.0",
    "ultralytics>=8.2.16,<9.0.0",
    "numpy<2.0.0",
    "scikit-learn>=1.5.1,<2.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "huggingface-hub>=0.24.5,<0.25.0",
    "skops>=0.10.0,<0.11.0",
    "quantile-forest>=1.3.7,<2.0.0",
]
cls_example = [
    "torch==2.1.0+cu121",
    "numpy<2.0.0",
]
det_example = [
    "ultralytics>=8.2.16,<9.0.0",
    "numpy<2.0.0",
]
reg_example = [
    "torch==2.1.0+cu121",
    "numpy<2.0.0",
]
seg_example = [
    "simpleitk>=2.3.1,<3.0.0",
    "lungmask>=0.2.20,<0.3.0",
    "numpy<2.0.0",
]
seg3d_example = [
    "torch==2.1.0+cu121",
    "scipy>=1.9.2,<2.0.0",
    "monai[einops]>=1.1.0,<1.2.0",
    "simpleitk>=2.3.1,<3.0.0",
    "numpy<2.0.0",
]
tabular_cls_example = [
    "scikit-learn>=1.5.1,<2.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "huggingface-hub>=0.24.5,<0.25.0",
]
tabular_reg_example = [
    "skops>=0.10.0,<0.11.0",
    "quantile-forest>=1.3.7,<2.0.0",
    "torch==2.1.0+cu121",
]

[tool.uv]
default-groups = []

[[tool.uv.index]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "torch-cu121" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flavor"]

[tool.hatch.build.targets.sdist]
exclude = ["examples*", "tests"]
