[metadata]
name = flavor
url = https://github.com/ailabstw/FLaVor
description = AILabs Federated Learning and Validation Framework
author = Keng-Chi Liu
author_email = calvin89029@gmail.com

[options]
packages = find:
exclude =
    dockerfile*
    example*
    script*

[options.extras_require]
fl =
    protobuf==3.14.0
    grpcio==1.34.0
    grpcio-tools==1.33.1
    jsonschema
fv =
    protobuf==3.14.0
    grpcio==1.34.0
    grpcio-tools==1.33.1
    jsonschema
infer =
    aiofile
    fastapi
    jsonschema
    python-multipart
    uvicorn
all =
    protobuf==3.14.0
    grpcio==1.34.0
    grpcio-tools==1.33.1
    aiofile
    fastapi
    jsonschema
    python-multipart
    uvicorn

[options.data_files]
schema =
    schema/FLresult.json
    schema/FVresult.json
    schema/ai-coco-v2.json
