[metadata]
name = flavor
url = https://github.com/ailabstw/FLaVor
description = AILabs Federated Learning and Validation Framework
author = Keng-Chi Liu
author_email = calvin89029@gmail.com

[options]
packages = find:
exclude =
    dockerfile*
    example*
    script*
install_requires =
    jsonschema>=4.5.1, <=4.19.2

[options.extras_require]
fl =
    protobuf==3.14.0
    grpcio==1.34.0
    grpcio-tools==1.33.1

fv =
    %(fl)s
infer =
    aiofile>=3.8.2, <=3.8.8
    fastapi>=0.100.0, <=0.104.0
    pydantic>=2.0.0, <=2.4.2
    python-multipart==0.0.6
    uvicorn>=0.21.0, <=0.23.2
    websockets>=11.0, <=12.0
    opencv-python-headless>=4.5.1.48, <=4.8.1.78
    nanoid==2.0.0
    gradio>=4.0.0, <=4.3.0
all =
    %(fl)s
    %(infer)s

[options.data_files]
schema =
    schema/FLresult.json
    schema/FVresult.json
    schema/ai-coco-v2.json
